[package]
name = "percore"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe per-CPU core mutable state on no_std platforms through exception masking."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/percore"
keywords = ["aarch64", "exceptions"]
categories = ["embedded", "no-std", "rust-patterns"]

[dependencies]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
