[package]
name = "percore"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Safe per-CPU core mutable state on no_std platforms through exception masking."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/percore"
keywords = ["aarch64", "exceptions"]
categories = ["embedded", "no-std", "rust-patterns"]

[features]
alloc = []
default = ["alloc"]

[dev-dependencies]
spin = { version = "0.10.0", default-features = false, features = [
  "lazy",
  "once",
] }

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
